; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamLookupCG.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamLookupCG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@raxNotFound = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @streamLookupCG(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %29

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* %5, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @sdslen(i64 %18)
  %20 = call i32* @raxFind(i32* %15, i8* %17, i32 %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** @raxNotFound, align 8
  %23 = icmp eq i32* %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %12
  br label %27

25:                                               ; preds = %12
  %26 = load i32*, i32** %6, align 8
  br label %27

27:                                               ; preds = %25, %24
  %28 = phi i32* [ null, %24 ], [ %26, %25 ]
  store i32* %28, i32** %3, align 8
  br label %29

29:                                               ; preds = %27, %11
  %30 = load i32*, i32** %3, align 8
  ret i32* %30
}

declare dso_local i32* @raxFind(i32*, i8*, i32) #1

declare dso_local i32 @sdslen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
